--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="header__container">
+      <h1 class="header__title">Welcome to Our Landing Page</h1>
+      <nav class="header__nav">
+        <a href="#about" class="header__link">About</a>
+        <a href="#services" class="header__link">Services</a>
+        <a href="#contact" class="header__link">Contact</a>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
