--- a/index.html
+++ b/index.html
@@ -19,5 +19,22 @@
       </nav>
     </div>
   </header>
+  <main class="main">
+    <section id="about" class="main__section main__section--about">
+      <h2 class="main__title">About Us</h2>
+      <p class="main__text">We are committed to delivering high-quality services that improve lives.</p>
+    </section>
+    
+    <section id="services" class="main__section main__section--services">
+      <h2 class="main__title">Our Services</h2>
+      <p class="main__text">We provide a range of services to cater to all your needs.</p>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="footer__container">
+      <p class="footer__text">&copy; 2024 Our Company. All Rights Reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
