added second paragraph to services

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     <section id="services" class="main__section main__section--services">
       <h2 class="main__title">Our Services</h2>
       <p class="main__text">We provide a range of services to cater to all your needs.</p>
+      <p class="main__text">And so much more</p>
     </section>
+
+
   </main>
 
   <footer class="footer">
