--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <section id="about" class="main__section main__section--about">
       <h2 class="main__title">About Us</h2>
       <p class="main__text">We are committed to delivering high-quality services that improve lives.</p>
+      <p class="main__text">Here's a demo of what git can do.</p>
     </section>
     
     <section id="services" class="main__section main__section--services">
       <h2 class="main__title">Our Services</h2>
       <p class="main__text">We provide a range of services to cater to all your needs.</p>
-      <p class="main__text">And so much more</p>
     </section>
 
 
