--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="about" class="main__section main__section--about">
       <h2 class="main__title">About Us</h2>
       <p class="main__text">We are committed to delivering high-quality services that improve lives.</p>
-      <p class="main__text">Here's a demo of what git can do.</p>
+      <p class="main__text">Here's a demo of what Git can do!!</p>
     </section>
     
     <section id="services" class="main__section main__section--services">
